Background overflow correction

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,15 @@
             min-height: 100%;
             border-radius: 0px;
             transition: 3.5s;
+            overflow: hidden;
+        }
+        
+        .videoBack{
+            object-fit: cover;
+            transform: scale(2);
+            opacity: 0.22;
+            width: 100%;
+            height: 100%;
         }
 
         .color-overlay{
@@ -105,25 +114,30 @@
             cursor: pointer;
         }
 
-        .videoBack{
-            object-fit: cover;
-            transform: scale(2);
-            opacity: 0.22;
-            width: 100%;
-            height: 100%;
-        }
+        
 
 
-        @media (max-width: 700px) {
+        @media (max-width: 1280px) and (min-width: 768px) {
             .container button{
-                width: 80%;
-                height: 60px;
-                font-size: 1em;
+                height: 70px;
+                font-size: 1.2rem;
             }
 
             .img-logo{
-                width: 400px;
-                height: 200px;
+                width: 600px;
+                height: 300px;
+            }
+        }
+        
+        @media (max-width: 767px) {
+            .container button{
+                width: 80%;
+                height: 60px;
+            }
+
+            .img-logo{
+                width: 350px;
+                height: 175px;
             }
         }
 
